# AegisGate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AICLIENT2API-QUICKSTART.md  CHANGELOG.md  CLIPROXY-QUICKSTART.md  Caddyfile  Caddyfile.example  Dockerfile  LICENSE  OPENCLAW_INJECT_PROXY_FETCH.md  OPEN_SOURCE_CHECKLIST.md  OTHER_TERMINAL_CLIENTS_USAGE.md  PR_DESCRIPTION_2026-02-26-security-hardening.md  README.md  README_zh.md  SKILL.md  SUB2API-QUICKSTART.md  WEBUI-QUICKSTART.md  docker-compose.aiclient2api.yml  docker-compose.cliproxy.yml  docker-compose.sub2api.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
aegisgate/: __init__.py  init_config.py
aegisgate/config/: feature_flags.py  redact_values.py  security_level.py  security_rules.py  settings.py
aegisgate/core/: audit.py  confirmation.py  confirmation_cache_task.py  confirmation_flow.py  context.py  dangerous_response_log.py  errors.py  gateway.py  gateway_auth.py  gateway_keys.py  gateway_network.py  gateway_ui_config.py  gateway_ui_routes.py  gw_tokens.py  hot_reload.py  models.py  pipeline.py  registry.py  security_boundary.py  semantic.py  stats.py  tfidf_model.py
aegisgate/filters/: anomaly_detector.py  base.py  exact_value_redaction.py  injection_detector.py  output_sanitizer.py  post_restore_guard.py  privilege_guard.py  rag_poison_guard.py  redaction.py  (+6 more)
config/: .env.example  README.md  gw_tokens.json.example  model_map.json  security_filters.yaml
docs/: concurrency-and-scalability.md  gateway-responsibility-and-over-processing.md  other-terminal-clients-usage.md
scripts/: caddy-entrypoint.sh  local_launcher.py  openclaw-inject-proxy-fetch.py  redeploy.sh  train_tfidf.py
www/: index.html  login.html
(+148 files in other folders)
