[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisgate"
version = "0.1.0"
description = "Pipeline-based LLM security gateway"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
redis = [
  "redis>=5.0.0",
]
postgres = [
  "psycopg[binary]>=3.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aegisgate*"]
