[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisgate"
version = "0.1.0"
description = "Pipeline-based LLM security gateway"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
]
redis = [
  "redis>=5.0.0",
]
postgres = [
  "psycopg[binary]>=3.1.0",
]
semantic = [
  "scikit-learn>=1.3.0",
  "jieba>=0.42.0",
  "joblib>=1.3.0",
]
observability = [
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[tool.pytest.ini_options]
testpaths = ["aegisgate/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["aegisgate"]
omit = ["aegisgate/tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aegisgate*"]
